# scraps

./: .gdbinit  .gitignore  Cargo.toml  README.md  x.py
src/: bsp.rs  cpu.rs  driver_interfaces.rs  lock.rs  main.rs  memory.rs  mmu.rs  mutex.rs  panic.rs  physical_page_allocator.rs  print.rs  process.rs  time.rs  util.rs
src/arch/: mod.rs
src/arch/aarch64/: cpu.rs  exception.rs  header.S  iboot.rs  link.4k.ld  link.64k.ld  mmu copy 2.rs  mmu copy.rs  mmu.rs  mod.rs  time.rs
src/arch/riscv/: cpu.rs  header.S  lock.rs  mmu.rs  time.rs
src/arch/riscv64/: cpu.rs  header.S  mmu.rs  mod.rs  time.rs  trap.S  trap.rs
src/arch/riscv64/drivers/: clint.rs  mod.rs
src/bsp/: raspi64.rs  riscvirt.rs
src/bsp/raspi64/: build.json  link.ld
src/bsp/riscvirt/: build.json  link.ld
src/drivers/: mod.rs  ns16550a.rs  pl011.rs
src/util/: dtb.rs  error.rs  mmio.rs  mod.rs
