[package]
name = "scraps"
version = "0.1.0"
authors = ["sreehari", "uanirudhx"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.release]
lto = true

[dependencies]
dtb = "0.2.0"

[features]
bsp_raspi64 = []
bsp_riscvirt = []
