[package]
name = "scraps"
version = "0.1.0"
authors = ["sreehari", "uanirudhx"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.release]
lto = true

[dependencies]
dtb = "0.2"
spin = "0.6"
register = "1.0"
cortex-a = { version = "5.0", optional = true }

[features]
bsp_raspi64 = ["cortex-a"]
bsp_riscvirt = []
