[package]
name = "scraps"
version = "0.1.0"
authors = ["sreehari", "uanirudhx"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.release]
lto = true

[dependencies]
fdt-rs = { version = "0.4", default-features = false }
spin = "0.7"
register = "1.0"
cortex-a = { version = "5.1", optional = true }
modular-bitfield = "0.11.2"
bitflags = "1.2.1"

[features]
bsp_raspi64 = ["cortex-a"]
bsp_riscvirt = []
